--- a/styles/bcdice.css
+++ b/styles/bcdice.css
@@ -1,15 +1,15 @@
 #bc-dice-control {
-    width: 36px;
-    height: 36px;
-    box-sizing: content-box;
-    font-size: 24px;
-    line-height: 36px;
-    background: rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0 10px #000;
-    margin: 0 0 8px;
-    color: #BBB;
-    text-align: center;
-    border: 1px solid #000;
-    border-radius: 5px;
-    cursor: pointer;
+  width: 36px;
+  height: 36px;
+  box-sizing: content-box;
+  font-size: 24px;
+  line-height: 36px;
+  background: rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px #000;
+  margin: 0 0 8px;
+  color: #bbb;
+  text-align: center;
+  border: 1px solid #000;
+  border-radius: 5px;
+  cursor: pointer;
 }
