migrated entities to v9 documents, fixed most of the issues. Still pending multiple # headers

--- a/templates/replacements.html
+++ b/templates/replacements.html
@@ -2,6 +2,6 @@
   <label>
     {{localize "fvtt-bcdice.replacementsHeader"}}
   </label>
-  <div>{{localize "fvtt-bcdice.replacementsTextHint"}}</div>
+  <p>{{localize "fvtt-bcdice.replacementsTextHint"}}</p>
   <textarea name="replacements">{{replacements}}</textarea>
 </div>
